--- a/cmsshoppingcart/src/main/resources/application.properties
+++ b/cmsshoppingcart/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost/cmsshoppingcart
+spring.datasource.url=jdbc:mysql://cmsshoppingcart.cyvta047ogzd.us-east-1.rds.amazonaws.com
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=xEJNfxI2QisUCZEqhC7x
 spring.servlet.multipart.max-file-size=-1
 spring.servlet.multipart.max-request-size=-1
