--- a/restapi/src/main/resources/application.properties
+++ b/restapi/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:mysql://localhost/cmsshoppingcart
+spring.datasource.url=jdbc:mysql://cmsshoppingcart.cyvta047ogzd.us-east-1.rds.amazonaws.com
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=xEJNfxI2QisUCZEqhC7x
